--- a/demo/src/main/resources/templates/bookDetail.html
+++ b/demo/src/main/resources/templates/bookDetail.html
@@ -40,31 +40,18 @@
     <div class="book-details" id="book-details">
         <img id="source-image" src="../static/images/book.png" alt="Source Type">
         <h1 id="book-title">Book Title</h1>
-        <p><strong>Alternate Title:</strong> <span id="alternative-title"></span></p>
-        <p><strong>Source Type:</strong> <span id="source-type"></span></p>
-        <p><strong>Authors:</strong> <span id="authors"></span></p>
-        <p><strong>Editors:</strong> <span id="editors"></span></p>
-        <p><strong>Series:</strong> <span id="series"></span></p>
-        <p><strong>Language:</strong> <span id="language"></span></p>
-        <p><strong>ISBN:</strong> <span id="isbn"></span></p>
-        <p><strong>Publisher:</strong> <span id="publisher"></span></p>
-        <p><strong>Published:</strong> <span id="published"></span></p>
-        <p><strong>Edition:</strong> <span id="edition"></span></p>
-        <p><strong>Copyright Year:</strong> <span id="copyright-year"></span></p>
-        <p><strong>Copyright Declaration:</strong> <span id="copyright-declaration"></span></p>
-        <p><strong>Status:</strong> <span id="status"></span></p>
-        <p><strong>URL:</strong> <a id="url" href="" target="_blank">Link</a></p>
-        <p><strong>Pages:</strong> <span id="pages"></span></p>
-        <p><strong>Subjects:</strong> <span id="subjects"></span></p>
-        <p><strong>Description:</strong></p>
-        <p id="description"></p>
-        <p><strong>Chapters:</strong> <span id="chapters"></span></p>
-        <p><strong>Book Database ID:</strong> <span id="book-databases-id"></span></p>
-        <p><strong>Original Source:</strong> <span id="original-source"></span></p>
-        <p><strong>Contributing Institution:</strong> <span id="contributing-institution"></span></p>
-        <p><strong>Digitization Explanation:</strong> <span id="digitization-explanation"></span></p>
-        <p><strong>Loan Period:</strong> <span id="loan-period"></span></p>
-        <p><strong>Display:</strong> <span id="display"></span></p>
+        <p id="authors-container"><strong>Authors:</strong> <span id="authors"></span></p>
+        <p id="editors-container"><strong>Editors:</strong> <span id="editors"></span></p>
+        <p id="series-container"><strong>Series:</strong> <span id="series"></span></p>
+        <p id="isbn-container"><strong>ISBN:</strong> <span id="isbn"></span></p>
+        <p id="publisher-container"><strong>Publisher:</strong> <span id="publisher"></span></p>
+        <p id="published-container"><strong>Published:</strong> <span id="published"></span></p>
+        <p id="edition-container"><strong>Edition:</strong> <span id="edition"></span></p>
+        <p id="copyright-declaration-container"><strong>Copyright Declaration:</strong> <span id="copyright-declaration"></span></p>
+        <p id="pages-container"><strong>Pages:</strong> <span id="pages"></span></p>
+        <p id="subjects-container"><strong>Subjects:</strong> <span id="subjects"></span></p>
+        <p id="description-container"><strong>Description:</strong> <span id="description"></span></p>
+        <p id="loan-period-container"><strong>Loan Period:</strong> <span id="loan-period"></span></p>
         <input type="hidden" id="fileId" th:value="${fileId}">
     </div>
 </div>
@@ -78,33 +65,19 @@
                 .then(response => response.json())
                 .then(data => {
                     document.getElementById('source-image').src = '../static/images/book.png';
-                    document.getElementById('book-title').textContent = data.title;
-                    document.getElementById('alternative-title').textContent = data.alternativeTitle;
-                    document.getElementById('source-type').textContent = data.sourceType;
-                    document.getElementById('authors').textContent = data.authors;
-                    document.getElementById('editors').textContent = data.editors;
-                    document.getElementById('series').textContent = data.series;
-                    document.getElementById('language').textContent = data.language;
-                    document.getElementById('isbn').textContent = data.isbn;
-                    document.getElementById('publisher').textContent = data.publisher;
-                    document.getElementById('published').textContent = data.published;
-                    document.getElementById('edition').textContent = data.edition;
-                    document.getElementById('copyright-year').textContent = data.copyright_year;
-                    document.getElementById('copyright-declaration').textContent = data.copyright_declaration;
-                    document.getElementById('status').textContent = data.status;
-                    const urlElement = document.getElementById('url');
-                    urlElement.href = data.url || '#';
-                    urlElement.textContent = data.url || 'N/A';
-                    document.getElementById('pages').textContent = data.pages;
-                    document.getElementById('subjects').textContent = data.subjects || 'N/A';
-                    document.getElementById('description').textContent = data.description || '';
-                    document.getElementById('chapters').textContent = data.chapters;
-                    document.getElementById('book-databases-id').textContent = data.book_databases_id;
-                    document.getElementById('original-source').textContent = data.original_source;
-                    document.getElementById('contributing-institution').textContent = data.contributing_institution;
-                    document.getElementById('digitization-explanation').textContent = data.digitization_explanation;
-                    document.getElementById('loan-period').textContent = data.loan_label;
-                    document.getElementById('display').textContent = data.display;
+                    updateField('book-title', data.title);
+                    updateField('authors', data.authors, 'authors-container');
+                    updateField('editors', data.editors, 'editors-container');
+                    updateField('series', data.series, 'series-container');
+                    updateField('isbn', data.isbn, 'isbn-container');
+                    updateField('publisher', data.publisher, 'publisher-container');
+                    updateField('published', data.published, 'published-container');
+                    updateField('edition', data.edition, 'edition-container');
+                    updateField('copyright-declaration', data.copyright_declaration, 'copyright-declaration-container');
+                    updateField('pages', data.pages, 'pages-container');
+                    updateField('subjects', data.subjects || 'N/A', 'subjects-container');
+                    updateField('description', data.description || '', 'description-container');
+                    updateField('loan-period', data.loan_label, 'loan-period-container');
                 })
                 .catch(error => {
                     console.error('Error fetching book details:', error);
@@ -113,6 +86,15 @@
             console.error('No book ID provided in URL');
         }
     });
+
+    function updateField(elementId, value, containerId = null) {
+        const element = document.getElementById(elementId);
+        if (value) {
+            element.textContent = value;
+        } else if (containerId) {
+            document.getElementById(containerId).style.display = 'none';
+        }
+    }
 </script>
 </body>
 </html>
